tests/compile-fail/references_to_locals_cant_be_passed_to_static.rs
fn main() {
    fn f(p: &'static i32) { assert_eq!(*p, 10); }

    let x = 10;
    f(&x);
    //~^ ERROR: `x` does not live long enough
}
